# neurorobotics-ws

./: .djinn_config  .gitignore  .gitmodules  Dockerfile  Dockerfile.sh  Dockerfile_debuggable  README.md  build.sh  djinn  docker-build.sh  docker-setup.sh  non-docker-setup.sh  setup-first-time.sh
config/: settings-africa.json  settings-no-px4.json  settings-trap.json  settings.json
docker/: Dockerfile  README.md
docker/base/: Dockerfile  ros_entrypoint.sh
docker/base/amd64/: Dockerfile
docker/base/armv7/: Dockerfile
docker/base/ros/: Dockerfile
docker/nrt/: Dockerfile
docker/nrt/camera/: Dockerfile
docker/nrt/imu/: Dockerfile
docker/nrt/pangolin/: Dockerfile
docker/ros/: Dockerfile
docker/skynet-base/: .vimrc
docker/skynet-oracle/: execpipe.sh  oracle.py
docker/vision-tools/: Dockerfile
ext/calibration/: Dockerfile
scripts/: build-bfx-deps.sh  build.sh  build_ros_packages.sh  cmake.sh  docker-build.sh  docker-setup.sh  install.sh  run-bfx.sh  run-rtps-agent.sh  start-oracle.sh  start.sh  test_airsim_data.sh
skynet-airsim/: Dockerfile
skynet-base/: Dockerfile  Dockerfile_debuggable
skynet-kalibr/: CMakeLists.txt
skynet-kalibr/include/: Logger.h
skynet-kalibr/src/: Logger.cpp
skynet-oracle/: Dockerfile  oracle.py  requirements.txt
skynet-ros/: Dockerfile
src/airsim_lib/: package.xml  setup.cfg  setup.py
src/airsim_lib/airsim_lib/: fetch_images.py  publisher_member_function.py  survey.py
src/gps_msgs/: CMakeLists.txt  package.xml
src/sensors/: CMakeLists.txt  i:w  package.xml
src/sensors/ext/nmealib/: CMakeLists.txt
src/sensors/ext/nmealib/include/: generate.h
src/sensors/ext/nmealib/src/: generate.c  nmeatime.c  tok.c
src/sensors/include/sensors/: TelemetryValidator.h  TelemetryValidatorConstants.h  UtilClasses.h  display.h  gps.h  properties.h  realsense.h  subscribers.h  video.h
src/sensors/launch/: sensors_launch.py
src/sensors/src/: TelemetryValidator.cpp  gps.cpp  publisher_member_function.cpp  realsense.cpp  subscriber_member_function.cpp  subscribers.cpp  video.cpp
vision-tools/: Dockerfile  visualize.py
